--- a/index.html
+++ b/index.html
@@ -36,6 +36,50 @@
 
 
 
+    <!-- -----------------------  news  link section ----------------- -->
+
+    <div class="container py-4 d-flex justify-content-between  " id="catagory-container">
+        <!-- <div id="catagory"> -->
+        <!-- <ul  class="d-flex justify-content-between fs-4 list-unstyled">
+                <li>
+                    <a class="active text-info" href="">Home</a>
+                </li>
+                <li>
+                    <a href="">Breaking News</a>
+                </li>
+                <li>
+                    <a href="">Regular News</a>
+                </li>
+                <li>
+                    <a href="">International News</a>
+                </li>
+                <li>
+                    <a href="">Sports</a>
+                </li>
+                <li>
+                    <a href="">Entertainment</a>
+                </li>
+                <li>
+                    <a href="">Culture</a>
+                </li>
+                <li>
+                    <a href="">Arts</a>
+                </li>
+                <li>
+                    <a href="">All News</a>
+                </li>
+            </ul> -->
+        <!-- 
+        </div> -->
+    </div>
+
+    <footer class="container-fluid p-5 bg-dark">
+        <h6 class="text-white text-center my-4">@ Copyright 2022 daily news !!</h6>
+
+    </footer>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
