added dynamic news

--- a/index.html
+++ b/index.html
@@ -36,42 +36,24 @@
 
 
 
-    <!-- -----------------------  news  link section ----------------- -->
+    <!-- -----------------------  all catagory section ----------------- -->
 
     <div class="container py-4 d-flex justify-content-between  " id="catagory-container">
-        <!-- <div id="catagory"> -->
-        <!-- <ul  class="d-flex justify-content-between fs-4 list-unstyled">
-                <li>
-                    <a class="active text-info" href="">Home</a>
-                </li>
-                <li>
-                    <a href="">Breaking News</a>
-                </li>
-                <li>
-                    <a href="">Regular News</a>
-                </li>
-                <li>
-                    <a href="">International News</a>
-                </li>
-                <li>
-                    <a href="">Sports</a>
-                </li>
-                <li>
-                    <a href="">Entertainment</a>
-                </li>
-                <li>
-                    <a href="">Culture</a>
-                </li>
-                <li>
-                    <a href="">Arts</a>
-                </li>
-                <li>
-                    <a href="">All News</a>
-                </li>
-            </ul> -->
-        <!-- 
-        </div> -->
     </div>
+
+    <!-- -------------------------  news part------------------- -->
+
+
+
+    <!-- ---------------------footer-------------------------- -->
+
+    <div class="container">
+        <div id="per-news" class="row">
+
+        </div>
+    </div>
+
+
 
     <footer class="container-fluid p-5 bg-dark">
         <h6 class="text-white text-center my-4">@ Copyright 2022 daily news !!</h6>
