complete news section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Daily news</title>
     <link rel="stylesheet" href="style.css">
+    <!-- ------------------font awesome--------------------- -->
+    <script src="https://kit.fontawesome.com/2dc755ba6a.js" crossorigin="anonymous"></script>
+    <!-- -------------------google font--------------------- -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,500;1,500&display=swap"
@@ -44,15 +47,33 @@
     <!-- -------------------------  news part------------------- -->
 
 
-
-    <!-- ---------------------footer-------------------------- -->
-
     <div class="container">
         <div id="per-news" class="row">
 
         </div>
     </div>
 
+
+    <!-- <div class="container d-flex justify-content-between my-5">
+        <div class="d-flex align-items-center ">
+            <img class="rounded-circle  " src="img/img1.jpg" alt="">
+            <div class="ps-3">
+                <h6>name</h6>
+                <p>date</p>
+            </div>
+        </div>
+        <div>
+            <p>  <i class="fa-regular fa-eye"></i> 1.5M</p>
+        </div>
+        <div>
+            <p> <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                    class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i></p>
+        </div>
+        <div>
+            <button>More details <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+    </div> -->
+    <!-- ---------------------footer-------------------------- -->
 
 
     <footer class="container-fluid p-5 bg-dark">
