--- a/index.html
+++ b/index.html
@@ -52,27 +52,27 @@
 
         </div>
     </div>
+    <!-- ----------------,modal------------------- -->
 
+    <!-- Modal -->
+    <div class="modal fade" id="loadedNewsDetails" tabindex="-1" aria-labelledby="loadedNewsDetailsLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loadedNewsDetailsLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div id="modal-body" class="modal-body">
 
-    <!-- <div class="container d-flex justify-content-between my-5">
-        <div class="d-flex align-items-center ">
-            <img class="rounded-circle  " src="img/img1.jpg" alt="">
-            <div class="ps-3">
-                <h6>name</h6>
-                <p>date</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
-        <div>
-            <p>  <i class="fa-regular fa-eye"></i> 1.5M</p>
-        </div>
-        <div>
-            <p> <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
-                    class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i></p>
-        </div>
-        <div>
-            <button>More details <i class="fa-solid fa-arrow-right"></i></button>
-        </div>
-    </div> -->
+    </div>
+
     <!-- ---------------------footer-------------------------- -->
 
 
