--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <style>
+        body {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            font-family: 'Josefin Sans', sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -23,10 +31,6 @@
         <nav class="navbar bg-light">
             <div class="container border-bottom p-3">
                 <a class="navbar-brand fw-bold fs-4">Daily <span class="text-info">News</span> </a>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-info" type="submit">Search</button>
-                </form>
                 <div class=" text-decoration-none  fs-4 ">
                     <a class=" text-decoration-none p-2 border-bottom" href="">News</a>
                     <a class=" text-decoration-none pe-3 text-black" href="">Blogs</a>
@@ -41,8 +45,23 @@
 
     <!-- -----------------------  all catagory section ----------------- -->
 
-    <div class="container py-4 d-flex justify-content-between  " id="catagory-container">
+    <div class="container py-4 d-flex justify-content-between text-wrap  " id="catagory-container">
     </div>
+
+
+
+    <!-- --------------------lodar--------------- -->
+
+    <section id="lodar" class="d-none">
+        <div class="d-flex justify-content-center align-content-center" style="height: 500px;">
+            <div class="spinner-border  text-info" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </section>
+
+
+
 
     <!-- -------------------------  news part------------------- -->
 
@@ -52,6 +71,7 @@
 
         </div>
     </div>
+
     <!-- ----------------,modal------------------- -->
 
     <!-- Modal -->
@@ -60,7 +80,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="loadedNewsDetailsLabel"></h5>
+                    <h5 class="modal-title text-primary fw-bold" id="loadedNewsDetailsLabel"></h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div id="modal-body" class="modal-body">
