--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <nav class="navbar bg-light">
             <div class="container border-bottom p-3">
                 <a class="navbar-brand fw-bold fs-4">Daily <span class="text-info">News</span> </a>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-primary" type="submit">Search</button>
+                </form>
                 <div class=" text-decoration-none  fs-4 ">
                     <a class=" text-decoration-none p-2 border-bottom" href="">News</a>
                     <a class=" text-decoration-none pe-3 text-black" href="">Blogs</a>
@@ -48,7 +52,22 @@
     <div class="container py-4 d-flex justify-content-between text-wrap  " id="catagory-container">
     </div>
 
+    <!-- --------------------extra part------------------------- -->
+    <div class="container rounded-3 text-dark bg-light">
+        <h5 class="p-4">3 items found for catagory Entertinment </h5>
+    </div>
 
+
+    <div class="container d-flex justify-content-between  my-4">
+        <div class="d-flex px-4">
+            <h4>Sort By View :</h4>
+            <input type="text" class="w-50 rounded-3 fs-5 ps-3" placeholder="defoult ">
+        </div>
+        <div>
+            <button class="btn btn-info fw-bold">Todays Pick !!</button>
+            <button class="btn btn-outline-info text-dark fw-bold">Trending !!</button>
+        </div>
+    </div>
 
     <!-- --------------------lodar--------------- -->
 
