--- a/blogs/index.html
+++ b/blogs/index.html
@@ -32,12 +32,8 @@
         <nav class="navbar bg-light">
             <div class="container border-bottom p-3">
                 <a class="navbar-brand fw-bold fs-4">Daily <span class="text-info">News</span> </a>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-primary" type="submit">Search</button>
-                </form>
                 <div class=" text-decoration-none  fs-4 ">
-                    <a class=" text-decoration-none p-2 border-bottom" href="">News</a>
+                    <a class=" text-decoration-none p-2 border-bottom" href="/index.html">News</a>
                     <a class=" text-decoration-none pe-3 text-black" href="">Blogs</a>
                     <img class="rounded-circle img-fluid " src="img/img1.jpg" alt="">
                 </div>
