--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Daily news</title>
-    <link rel="stylesheet" href="style.css">
     <!-- ------------------font awesome--------------------- -->
     <script src="https://kit.fontawesome.com/2dc755ba6a.js" crossorigin="anonymous"></script>
     <!-- -------------------google font--------------------- -->
@@ -32,7 +31,7 @@
             <div class="container border-bottom p-3">
                 <a class="navbar-brand fw-bold fs-4">Daily <span class="text-info">News</span> </a>
                 <div class=" text-decoration-none  fs-4 ">
-                    <a class=" text-decoration-none p-2 border-bottom" href="">News</a>
+                    <a class=" text-decoration-none p-2 border-bottom" href="">Home</a>
                     <a class=" text-decoration-none pe-3 text-black" href="blogs/index.html">Blogs</a>
                     <img class="rounded-circle img-fluid " src="img/img1.jpg" alt="">
                 </div>
@@ -51,18 +50,6 @@
     <!-- --------------------extra part------------------------- -->
     <div class="container rounded-3 text-dark bg-light">
         <h5 class="p-4">3 items found for catagory Entertinment </h5>
-    </div>
-
-
-    <div class="container d-flex justify-content-between  my-4">
-        <div class="d-flex px-4">
-            <h4>Sort By View :</h4>
-            <input type="text" class="w-auto rounded-3 fs-5 ps-3" placeholder="defoult ">
-        </div>
-        <div>
-            <button class="btn btn-info fw-bold">Todays Pick !!</button>
-            <button class="btn btn-outline-info text-dark fw-bold">Trending !!</button>
-        </div>
     </div>
 
     <!-- --------------------lodar--------------- -->
@@ -102,7 +89,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
