--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- --------------------extra part------------------------- -->
     <div class="container rounded-3 text-dark bg-light">
-        <h5 class="p-4">3 items found for catagory Entertinment </h5>
+        <h5 class="p-4 text-center"><span id="news-amount">0</span> news found </h5>
     </div>
 
     <!-- --------------------lodar--------------- -->
